; ModuleID = '/home/carl/AnghaBench/vlc/src/network/extr_udp.c_net_SetMcastHopLimit.c'
source_filename = "/home/carl/AnghaBench/vlc/src/network/extr_udp.c_net_SetMcastHopLimit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EAFNOSUPPORT = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@VLC_EGENERIC = common dso_local global i32 0, align 4
@IPV6_MULTICAST_HOPS = common dso_local global i32 0, align 4
@IP_MULTICAST_TTL = common dso_local global i32 0, align 4
@SOL_IP = common dso_local global i32 0, align 4
@SOL_IPV6 = common dso_local global i32 0, align 4
@VLC_SUCCESS = common dso_local global i32 0, align 4
@net_errno = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i32, i32)* @net_SetMcastHopLimit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @net_SetMcastHopLimit(i32* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %11 = load i32, i32* %7, align 4
  switch i32 %11, label %12 [
  ]

12:                                               ; preds = %4
  %13 = load i32, i32* @EAFNOSUPPORT, align 4
  store i32 %13, i32* @errno, align 4
  %14 = load i32*, i32** %5, align 8
  %15 = load i32, i32* @EAFNOSUPPORT, align 4
  %16 = call i32 @vlc_strerror_c(i32 %15)
  %17 = call i32 @msg_Warn(i32* %14, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i32 %16)
  %18 = load i32, i32* @VLC_EGENERIC, align 4
  ret i32 %18
}

declare dso_local i32 @msg_Warn(i32*, i8*, i32) #1

declare dso_local i32 @vlc_strerror_c(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
